# prog-environement

./: .gitignore  README.md  flake.nix  project-test.cabal
app/: Main.hs
src/: Hello.hs
test/: HelloSpec.hs
